Implement confirmation modal for setting up custom sending service
This commit implements the confirmation modal that is displayed when the
user clicks on the "I’ll set up my own email service" link in the MSS
step of the welcome wizard.

[MAILPOET-4818]

--- a/mailpoet/views/layout.html
+++ b/mailpoet/views/layout.html
@@ -81,6 +81,7 @@ jQuery('#adminmenu #toplevel_page_mailpoet-newsletters')
   var mailpoet_deactivate_subscriber_after_inactive_days = <%= json_encode(deactivate_subscriber_after_inactive_days) %>;
   var mailpoet_woocommerce_version = <%= json_encode(get_woocommerce_version()) %>;
   var mailpoet_track_wizard_loaded_via_woocommerce = <%= json_encode(track_wizard_loaded_via_woocommerce) %>;
+  var mailpoet_mail_function_enabled = '<%= mail_function_enabled %>';
 
   var mailpoet_site_name = '<%= site_name %>';
   var mailpoet_site_url = "<%= site_url %>";
