--- a/mailpoet/views/newsletter/editor.html
+++ b/mailpoet/views/newsletter/editor.html
@@ -438,6 +438,7 @@
     'canNotUndo': _x('No actions available to undo.', "A button title when user can't undo the change in editor", 'mailpoet'),
     'canRedo': _x('Redo', 'A button title when user can redo the change in editor', 'mailpoet'),
     'canNotRedo': _x('No actions available to redo.', "A button title when user can't redo the change in editor", 'mailpoet'),
+    'couponMinAndMaxAmountFieldsErrorMessage': __('Please enter a value with one monetary decimal point (%s) without thousand separators and currency symbols.'),
   }) %>
 <% endblock %>
 
