Show the MailPoet logo on the landing page
This will show the topbar (including the MailPoet logo) and set content max-width

MAILPOET-5029

--- a/mailpoet/assets/css/src/components-plugin/_landingpage.scss
+++ b/mailpoet/assets/css/src/components-plugin/_landingpage.scss
@@ -1,6 +1,7 @@
 #mailpoet_landingpage_container {
   $content-padding: 32px 65px;
   $mobile-content-padding: 25px;
+  $landingpage-max-width: 1460px;
 
   .mailpoet-content-center {
     text-align: center;
@@ -129,6 +130,11 @@
         }
       }
     }
+  }
+
+  main {
+    margin: 0 auto;
+    max-width: $landingpage-max-width;
   }
 }
 
