Implement purchase date dynamic filter
MAILPOET-4986

--- a/mailpoet/views/segments.html
+++ b/mailpoet/views/segments.html
@@ -212,6 +212,7 @@
     'inTheLast': _x('in the last', 'Appears together with `days` when creating a new WooCommerce segment based on the number of orders.'),
     'wooNumberOfOrdersOrders': __('orders'),
     'wooPurchasedCategory': __('purchased in category'),
+    'wooPurchaseDate': __('purchase date'),
     'wooPurchasedProduct': __('purchased product'),
     'wooTotalSpent': __('total spent'),
     'wooCustomerInCountry': __('is in country'),
