--- a/mailpoet/views/layout.html
+++ b/mailpoet/views/layout.html
@@ -134,6 +134,7 @@ jQuery('#adminmenu #toplevel_page_mailpoet-newsletters')
   'senderEmailAddressWarning3': _x('Read more.'),
   'mailerSendingNotResumedUnauthorized': __('Failed to resume sending because the email address is unauthorized. Please authorize it and try again.'),
   'dismissNotice': __('Dismiss this notice.'),
+  'confirmEdit': __('Sending is in progress. Do you want to pause sending and edit the newsletter?'),
   'confirmAutomaticNewsletterEdit': __('To edit this email, it needs to be deactivated. You can activate it again after you make the changes.'),
   'subscribersLimitNoticeTitle': __('Congratulations, you now have more than [subscribersLimit] subscribers!'),
   'freeVersionLimit': __('Our free version is limited to [subscribersLimit] subscribers.'),
