Add a new WooCommerce segment based on the value of the orders
[MAILPOET-4988]

--- a/mailpoet/views/segments.html
+++ b/mailpoet/views/segments.html
@@ -203,7 +203,9 @@
 
     'wooNumberOfOrders': __('# of orders'),
     'moreThan': __('more than'),
+    'moreThanOrEqual': __('more than or equal'),
     'lessThan': __('less than'),
+    'lessThanOrEqual': __('less than or equal'),
     'wooNumberOfOrdersCount': __('count'),
     'daysPlaceholder': __('days'),
     'days': _x('days', 'Appears together with `inTheLast` when creating a new WooCommerce segment based on the number of orders.'),
@@ -213,7 +215,8 @@
     'wooPurchasedProduct': __('purchased product'),
     'wooTotalSpent': __('total spent'),
     'wooCustomerInCountry': __('is in country'),
-    'wooTotalSpentAmount': __('amount'),
+    'wooSingleOrderValue': __('single order value'),
+    'wooSpentAmount': __('amount'),
     'selectWooPurchasedCategory': __('Search categories'),
     'selectWooPurchasedProduct': __('Search products'),
     'selectWooCountry': __('Search countries'),
