Add reason for unsubscribing to the admin when using MP API
This commit adds the string about unsubscribing using the MP API to the
subscribers page in the admin. Without this we were showing a generic
message "Unsubscribed for an unknonw reason".

[MAILPOET-5152]

--- a/mailpoet/views/subscribers/subscribers.html
+++ b/mailpoet/views/subscribers/subscribers.html
@@ -79,6 +79,7 @@
     'unsubscribedNewsletter': __('Unsubscribed at %1$d, from newsletter [link].'),
     'unsubscribedManage': __('Unsubscribed at %1$d, using the “Manage my Subscription” page.'),
     'unsubscribedAdmin': __('Unsubscribed at %1$d, by admin "%2$d".'),
+    'unsubscribedMpApi': __('Unsubscribed at %1$d, via the MP API.'),
     'unsubscribedUnknown': __('Unsubscribed at %1$d, for an unknown reason.'),
 
     'subscriber': __('Subscriber'),
