Align send email step title icon
[MAILPOET-4999]

--- a/mailpoet/assets/css/src/components-automation-editor/_step.scss
+++ b/mailpoet/assets/css/src/components-automation-editor/_step.scss
@@ -54,7 +54,10 @@
 }
 
 .mailpoet-automation-editor-step-title {
+  align-items: center;
   color: $color-wordpress-grey-dark;
+  display: flex;
+  gap: 8px;
 }
 
 .mailpoet-automation-editor-step-subtitle {
