Add "was sent email" filter
MAILPOET-5004

--- a/mailpoet/views/segments.html
+++ b/mailpoet/views/segments.html
@@ -137,6 +137,7 @@
     'selectUserRolePlaceholder': __('Search user roles'),
     'selectCustomFieldPlaceholder': __('Select custom field'),
     'emailActionOpened': _x('opened', 'Dynamic segment creation: when newsletter was opened'),
+    'emailActionWasSent': _x('was sent', 'Dynamic segment creation: when newsletter was sent'),
     'emailActionMachineOpened': _x('machine-opened', 'Dynamic segment creation: list of all subscribers that opened the newsletter automatically in the background'),
     'emailActionOpensAbsoluteCount': __('# of opens'),
     'emailActionMachineOpensAbsoluteCount': __('# of machine-opens'),
