Add a new Twig filter that uses wp_kses() and use it instead of raw
Before this commit, whenever we needed to output HTML from a function
call in a Twig template, we would use the raw filter that allows any
kind of HTML to be outputted.

This commit adds a new filter called wpKses that internally calls
wp_kses(). We can use this filter instead of raw, this way we can define
the list of allowed HTML and the output becomes more secure.

This commit also replaces all the instances where we were using raw.

[MAILPOET-5238]

--- a/mailpoet/views/upgrade.html
+++ b/mailpoet/views/upgrade.html
@@ -304,10 +304,11 @@
       <%= _x('Upgrade now', 'This text resides in the Upgrade page: /wp-admin/admin.php?page=mailpoet-upgrade') %>
     </a>
     <p>
+      <% set allowedHtml = {'a': {'href': [], 'target': []}} %>
       <%=
         _x('And if you’re not sure which plan is the right one for you, our [link]Customer Support team[/link] are on hand to help you decide.', 'This text resides in the Upgrade page: /wp-admin/admin.php?page=mailpoet-upgrade')
         |replaceLinkTags('https://www.mailpoet.com/support/sales-pre-sales-questions/', {'target': '_blank'})
-        |raw
+        |wpKses(allowedHtml)
       %>
     </p>
   </div>
