Remove use of the Twig raw filter
In this particular template, using raw was not necessary as the HTML
markup encapsulated the full translatable string. So I removed the call
to raw, and added the HTML markup directly to the template.

[MAILPOET-5238]

--- a/mailpoet/views/subscribers/importExport/export.html
+++ b/mailpoet/views/subscribers/importExport/export.html
@@ -37,10 +37,9 @@
       <label for="export_columns">
         <%= __('List of fields to export') %>
         <p class="description">
-          <%= __('[link]Read about the Global status.[/link]')
-          |replaceLinkTags('https://kb.mailpoet.com/article/245-what-is-global-status', {'target': '_blank', 'data-beacon-article': '5a9548782c7d3a75495122f9'})
-          |raw
-          %>
+          <a href="https://kb.mailpoet.com/article/245-what-is-global-status" target="_blank" data-beacon-article="5a9548782c7d3a75495122f9">
+            <%= _x('Read about the Global status.', 'Link to a documentation page in the knowledge base about what is the subscriber global status') %>
+          </a>
         </p>
       </label>
     </div>
