Escape data sent from Twig to JS variables
This commit changes the way that we are passing data from Twig to JS
variables. Before we were using the raw value of the variable which
could be insecure depending on the source of the variable. Malicious
code could be injected in the variable that would result in JS code
being executed in the browser.

Now we are escaping the value of the variable and then parsing it with
JSON.parse(). This should ensure that whatever is the content of the
Twig variable, it is never possible to inject code that is executed by
the browser.

[MAILPOET-5238]

--- a/mailpoet/views/subscribers/importExport/export.html
+++ b/mailpoet/views/subscribers/importExport/export.html
@@ -84,9 +84,8 @@
 
 <script type="text/javascript">
   var
-    segments = <%= segments|raw %>,
-    subscriberFieldsSelect2 =
-      <%= subscriberFieldsSelect2|raw %>,
+    segments = JSON.parse("<%=segments|escape('js')%>"),
+    subscriberFieldsSelect2 = JSON.parse("<%=subscriberFieldsSelect2|escape('js')%>"),
     exportData = {
      segments: segments.length || null
     };
