Add average order value filter
MAILPOET-4987

--- a/mailpoet/views/segments.html
+++ b/mailpoet/views/segments.html
@@ -214,6 +214,7 @@
     'daysPlaceholder': __('days'),
     'days': _x('days', 'Appears together with `inTheLast` when creating a new WooCommerce segment based on the number of orders.'),
     'inTheLast': _x('in the last', 'Appears together with `days` when creating a new WooCommerce segment based on the number of orders.'),
+    'wooAverageSpent': __('average order value'),
     'wooNumberOfOrdersOrders': __('orders'),
     'wooPurchasedCategory': __('purchased in category'),
     'wooPurchaseDate': __('purchase date'),
