Dynamic segment filter for first/last name and email
MAILPOET-4997

--- a/mailpoet/views/segments.html
+++ b/mailpoet/views/segments.html
@@ -153,12 +153,22 @@
     'equals': __('equals'),
     'notEquals': __('not equals'),
     'contains': __('contains'),
+    'notContains': _x('does not contain', 'Dynamic segment creation: operator used with subscriber fields. Should make sense in a sentence like "subscriber email does not contain hotmail.com"'),
     'value': __('value'),
     'selectValue': __('Select value'),
     'checked': __('checked'),
     'unchecked': __('unchecked'),
     'unknown': __('unknown'),
     'notUnknown': __('not unknown'),
+    'is': _x('is', 'Dynamic segment creation: operator used with subscriber fields. Should make sense in a sentence like "subscriber first name is Bill"'),
+    'isNot': _x('is not', 'Dynamic segment creation: operator used with subscriber fields. Should make sense in a sentence like "subscriber first name is not Bill"'),
+    'startsWith': _x('starts with', 'Dynamic segment creation: operator used with subscriber fields. Should make sense in a sentence like "subscriber email starts with bill"'),
+    'notStartsWith': _x('does not start with', 'Dynamic segment creation: operator used with subscriber fields. Should make sense in a sentence like "subscriber email does not start with bill"'),
+    'endsWith': _x('ends with', 'Dynamic segment creation: operator used with subscriber fields. Should make sense in a sentence like "subscriber email ends with yahoo.com"'),
+    'notEndsWith': _x('does not end with', 'Dynamic segment creation: operator used with subscriber fields. Should make sense in a sentence like "subscriber email does not end with yahoo.com"'),
+    'firstName': _x('first name', 'Dynamic segment creation: option in the segment select. Should make sense in a sentence like "subscriber first name does not contain Q"'),
+    'lastName': _x('last name', 'Dynamic segment creation: option in the segment select. Should make sense in a sentence like "subscriber last name does not contain Q"'),
+    'email': _x('email', 'Dynamic segment creation: option in the segment select. Should make sense in a sentence like "subscriber email does not contain Q"'),
 
     'before': _x('before', 'Meaning: "Subscriber subscribed before April"'),
     'after': _x('after', 'Meaning: "Subscriber subscribed after April'),
