Add ?ref=plugin-upgrade-page to all links in the upgrade page
[MAILPOET-5141]

--- a/mailpoet/views/upgrade.html
+++ b/mailpoet/views/upgrade.html
@@ -16,9 +16,9 @@
         <a
           target="_blank"
           <% if (has_valid_api_key) %>
-            href="<%= 'https://account.mailpoet.com/orders/upgrade/' ~ plugin_partial_key ~ '?utm_source=plugin&utm_medium=premium&utm_campaign=upgrade' %>"
+            href="<%= 'https://account.mailpoet.com/orders/upgrade/' ~ plugin_partial_key ~ '?utm_source=plugin&utm_medium=premium&utm_campaign=upgrade&ref=plugin-upgrade-page' %>"
           <% else %>
-            href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=business&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase' %>"
+            href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=business&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase&ref=plugin-upgrade-page' %>"
           <% endif %>
           class="mailpoet-button button-primary"
         >
@@ -46,7 +46,7 @@
     </p>
     <a
       target="_blank"
-      href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=starter&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase' | escape('html_attr') %>"
+      href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=starter&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase&ref=plugin-upgrade-page' | escape('html_attr') %>"
       class="mailpoet-button button-primary"
     >
       <%= _x('Sign up for free', 'This text resides in the Upgrade page: /wp-admin/admin.php?page=mailpoet-upgrade') %>
@@ -178,9 +178,9 @@
         <a
           target="_blank"
           <% if (has_valid_api_key) %>
-            href="<%= 'https://account.mailpoet.com/orders/upgrade/' ~ plugin_partial_key ~ '?utm_source=plugin&utm_medium=premium&utm_campaign=upgrade' %>"
+            href="<%= 'https://account.mailpoet.com/orders/upgrade/' ~ plugin_partial_key ~ '?utm_source=plugin&utm_medium=premium&utm_campaign=upgrade&ref=plugin-upgrade-page' %>"
           <% else %>
-            href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=business&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase' %>"
+            href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=business&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase&ref=plugin-upgrade-page' %>"
           <% endif %>
         class="mailpoet-button button-primary"
         >
@@ -218,9 +218,9 @@
         <a
           target="_blank"
           <% if (has_valid_api_key) %>
-            href="<%= 'https://account.mailpoet.com/orders/upgrade/' ~ plugin_partial_key ~ '?utm_source=plugin&utm_medium=premium&utm_campaign=upgrade' %>"
+            href="<%= 'https://account.mailpoet.com/orders/upgrade/' ~ plugin_partial_key ~ '?utm_source=plugin&utm_medium=premium&utm_campaign=upgrade&ref=plugin-upgrade-page' %>"
           <% else %>
-            href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=creator&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase' %>"
+            href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=creator&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase&ref=plugin-upgrade-page' %>"
           <% endif %>
           class="mailpoet-button button-primary"
         >
@@ -267,9 +267,9 @@
       <a
         target="_blank"
         <% if (has_valid_api_key) %>
-          href="<%= 'https://account.mailpoet.com/orders/upgrade/' ~ plugin_partial_key ~ '?utm_source=plugin&utm_medium=premium&utm_campaign=upgrade' %>"
+          href="<%= 'https://account.mailpoet.com/orders/upgrade/' ~ plugin_partial_key ~ '?utm_source=plugin&utm_medium=premium&utm_campaign=upgrade&ref=plugin-upgrade-page' %>"
         <% else %>
-          href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=agency&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase' %>"
+          href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=agency&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase&ref=plugin-upgrade-page' %>"
         <% endif %>
         class="mailpoet-button button-primary"
       >
@@ -295,9 +295,9 @@
     <a
       target="_blank"
       <% if (has_valid_api_key) %>
-        href="<%= 'https://account.mailpoet.com/orders/upgrade/' ~ plugin_partial_key ~ '?utm_source=plugin&utm_medium=premium&utm_campaign=upgrade' %>"
+        href="<%= 'https://account.mailpoet.com/orders/upgrade/' ~ plugin_partial_key ~ '?utm_source=plugin&utm_medium=premium&utm_campaign=upgrade&ref=plugin-upgrade-page' %>"
       <% else %>
-        href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=business&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase' %>"
+        href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=business&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase&ref=plugin-upgrade-page' %>"
       <% endif %>
       class="mailpoet-button button-primary"
     >
@@ -307,7 +307,7 @@
       <% set allowedHtml = {'a': {'href': [], 'target': []}} %>
       <%=
         _x('And if you’re not sure which plan is the right one for you, our [link]Customer Support team[/link] are on hand to help you decide.', 'This text resides in the Upgrade page: /wp-admin/admin.php?page=mailpoet-upgrade')
-        |replaceLinkTags('https://www.mailpoet.com/support/sales-pre-sales-questions/', {'target': '_blank'})
+        |replaceLinkTags('https://www.mailpoet.com/support/sales-pre-sales-questions/?ref=plugin-upgrade-page', {'target': '_blank'})
         |wpKses(allowedHtml)
       %>
     </p>
