--- a/mailpoet/views/upgrade.html
+++ b/mailpoet/views/upgrade.html
@@ -20,7 +20,7 @@
           <% else %>
             href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=business&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase&ref=plugin-upgrade-page' %>"
           <% endif %>
-          class="mailpoet-button button-primary"
+          class="mailpoet-button button-primary mailpoet-premium-shop-link"
         >
 
           <%= _x('Upgrade', 'This text resides in the Upgrade page: /wp-admin/admin.php?page=mailpoet-upgrade') %>
@@ -47,7 +47,7 @@
     <a
       target="_blank"
       href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=starter&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase&ref=plugin-upgrade-page' | escape('html_attr') %>"
-      class="mailpoet-button button-primary"
+      class="mailpoet-button button-primary mailpoet-premium-shop-link"
     >
       <%= _x('Sign up for free', 'This text resides in the Upgrade page: /wp-admin/admin.php?page=mailpoet-upgrade') %>
     </a>
@@ -182,7 +182,7 @@
           <% else %>
             href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=business&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase&ref=plugin-upgrade-page' %>"
           <% endif %>
-        class="mailpoet-button button-primary"
+        class="mailpoet-button button-primary mailpoet-premium-shop-link"
         >
           <%= _x('Get started', 'This text resides in the Upgrade page: /wp-admin/admin.php?page=mailpoet-upgrade') %>
         </a>
@@ -222,7 +222,7 @@
           <% else %>
             href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=creator&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase&ref=plugin-upgrade-page' %>"
           <% endif %>
-          class="mailpoet-button button-primary"
+          class="mailpoet-button button-primary mailpoet-premium-shop-link"
         >
           <%= _x('Get started', 'This text resides in the Upgrade page: /wp-admin/admin.php?page=mailpoet-upgrade') %>
         </a>
@@ -271,7 +271,7 @@
         <% else %>
           href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=agency&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase&ref=plugin-upgrade-page' %>"
         <% endif %>
-        class="mailpoet-button button-primary"
+        class="mailpoet-button button-primary mailpoet-premium-shop-link"
       >
         <%= _x('Buy Now', 'This text resides in the Upgrade page: /wp-admin/admin.php?page=mailpoet-upgrade') %>
       </a>
@@ -299,7 +299,7 @@
       <% else %>
         href="<%= "https://account.mailpoet.com/?s=" ~ subscriber_count ~ "&g=business&billing=monthly&email=" ~ current_wp_user.user_email ~ '&utm_source=plugin&utm_medium=premium&utm_campaign=purchase&ref=plugin-upgrade-page' %>"
       <% endif %>
-      class="mailpoet-button button-primary"
+      class="mailpoet-button button-primary mailpoet-premium-shop-link"
     >
       <%= _x('Upgrade now', 'This text resides in the Upgrade page: /wp-admin/admin.php?page=mailpoet-upgrade') %>
     </a>
@@ -325,5 +325,11 @@
 <% block after_javascript %>
 <script type="text/javascript">
   MailPoet.trackEvent('Premium page viewed');
+
+  jQuery(function($) {
+    $('.mailpoet-premium-page a.mailpoet-premium-shop-link').on('click', function() {
+      MailPoet.trackEvent('Upgrade page CTA clicked');
+    });
+  });
 </script>
 <% endblock %>
