Add filter for used payment method
MAILPOET-4993

--- a/mailpoet/assets/css/src/generic/_helpers.scss
+++ b/mailpoet/assets/css/src/generic/_helpers.scss
@@ -2,6 +2,10 @@
   width: min-content;
 }
 
+.mailpoet-max-content-width {
+  max-width: max-content;
+}
+
 .mailpoet-nowrap {
   white-space: nowrap;
 }
