--- a/mailpoet/views/segments.html
+++ b/mailpoet/views/segments.html
@@ -64,6 +64,7 @@
     'multipleSegmentsRestored': __('%1$d lists have been restored from the Trash.'),
     'duplicate': __('Duplicate'),
     'listDuplicated': __('List "%1$s" has been duplicated.'),
+    'segmentDuplicated': __('Segment "%1$s" has been duplicated.'),
     'update': __('Update'),
     'forceSync': __('Force Sync'),
     'readMore': __('Read More'),
