Make the tool tip sentence a question
[MAILPOET-4973]

--- a/mailpoet/views/woo_system_info.html
+++ b/mailpoet/views/woo_system_info.html
@@ -29,7 +29,7 @@
   <tr>
     <td data-export-label="Cron ping URL"><%= __("Cron ping URL:") %></td>
     <td class="help">
-      <span class="woocommerce-help-tip" data-tip="<%= __("The URL which needs to be pinged to get the cron started?") %>"></span>
+      <span class="woocommerce-help-tip" data-tip="<%= __("Which URL needs to be pinged to get the cron started?") %>"></span>
     </td>
     <td><a href="<%= system_info.cron_ping_url %>"><%= system_info.cron_ping_url %></a></td>
   </tr>
