--- a/mailpoet/views/woo_system_info.html
+++ b/mailpoet/views/woo_system_info.html
@@ -1,7 +1,10 @@
 <table class="wc_status_table widefat" cellspacing="0">
   <thead>
   <tr>
-    <th colspan="3" data-export-label="MailPoet"><h2><%= __("MailPoet") %></h2></th>
+    <th colspan="3" data-export-label="MailPoet"><h2
+    ><%= __("MailPoet") %>
+      <span class="woocommerce-help-tip" data-tip="<%= __("This section shows details of MailPoet") %>"></span>
+    </h2></th>
   </tr>
   </thead>
   <tbody>
