Fix translation string typo

--- a/mailpoet/views/woo_system_info.html
+++ b/mailpoet/views/woo_system_info.html
@@ -11,7 +11,7 @@
   <tr>
     <td data-export-label="Sending Method"><%= __("Sending Method:") %></td>
     <td class="help">
-      <span class="woocommerce-help-tip" data-tip="<%= __("What method is used to sent out newsletters?")|escape('html_attr') %>"></span>
+      <span class="woocommerce-help-tip" data-tip="<%= __("What method is used to send out newsletters?")|escape('html_attr') %>"></span>
     </td>
     <td><%= system_info.sending_method %></td>
   </tr>
