--- a/mailpoet/assets/css/src/components-automation-analytics/tabs.scss
+++ b/mailpoet/assets/css/src/components-automation-analytics/tabs.scss
@@ -4,6 +4,10 @@
   background: $color-white;
   border: 1px solid $color-grey;
 
+  .components-tab-panel__tabs-item.is-active {
+    box-shadow: inset 0 -4px 0 0 var(--wp-admin-theme-color);
+  }
+
   .components-tab-panel__tabs {
     border-bottom: 1px solid $color-grey;
   }
