Add frontend for city, postal code filters
MAILPOET-4990

--- a/mailpoet/views/segments.html
+++ b/mailpoet/views/segments.html
@@ -230,6 +230,8 @@
     'wooPurchasedProduct': __('purchased product'),
     'wooTotalSpent': __('total spent'),
     'wooCustomerInCountry': __('is in country'),
+    'wooCustomerInCity': __('city'),
+    'wooCustomerInPostalCode': __('postal code'),
     'wooSingleOrderValue': __('single order value'),
     'wooSpentAmount': __('amount'),
     'selectWooPurchasedCategory': __('Search categories'),
