Rename "is in country" filter to "country"
MAILPOET-4990

--- a/mailpoet/views/segments.html
+++ b/mailpoet/views/segments.html
@@ -229,7 +229,7 @@
     'wooPurchaseDate': __('purchase date'),
     'wooPurchasedProduct': __('purchased product'),
     'wooTotalSpent': __('total spent'),
-    'wooCustomerInCountry': __('is in country'),
+    'wooCustomerInCountry': __('country'),
     'wooCustomerInCity': __('city'),
     'wooCustomerInPostalCode': __('postal code'),
     'wooSingleOrderValue': __('single order value'),
