--- a/mailpoet/assets/css/src/components-automation-analytics/colors.scss
+++ b/mailpoet/assets/css/src/components-automation-analytics/colors.scss
@@ -1,4 +1,11 @@
 $color-grey: #ddd;
+$color-gutenberg-grey-600: #949494;
 $color-white: #fff;
 $color-black: #1e1e1e;
 $color-primary: #007cba;
+$color-gutenberg-alert-green: #4ab866;
+$color-wp-green-0: #edfaef;
+$color-wp-green-60: #007017;
+$color-wp-yellow-0: #fcf9e8;
+$color-wp-yellow-50: #996800;
+$color-wp-yellow-60: #755100;
