Remove padding from components popover
[MAILPOET-5092]

--- a/mailpoet/assets/css/src/components-automation-analytics/header.scss
+++ b/mailpoet/assets/css/src/components-automation-analytics/header.scss
@@ -7,6 +7,10 @@
   .woocommerce-filters-filter {
     width: 100%;
 
+    .components-dropdown__content .components-popover__content {
+      padding: 0
+    }
+
     * {
       box-sizing: border-box;
     }
