Fix small styling issues
[MAILPOET-5092]

--- a/mailpoet/assets/css/src/components-automation-analytics/tabs/email.scss
+++ b/mailpoet/assets/css/src/components-automation-analytics/tabs/email.scss
@@ -2,12 +2,19 @@
 
 .mailpoet-analytics-main-value {
   font-size: 13px;
+  font-weight: 400;
   line-height: 18px;
   margin: 0 0 4px;
-  font-weight: 400;
 }
+
 .mailpoet-analytics-badge {
+  background: $color-grey;
+  border-radius: 2px;
+  font-size: 11px;
   font-weight: 400;
+  line-height: 16px;
+  margin-right: 4px;
+  padding: 4px 8px;
 }
 
 .mailpoet-automation-analytics-email-name {
@@ -16,15 +23,6 @@
 
 .mailpoet-automation-analytics-email-clicked {
   font-weight: 600;
-}
-
-.mailpoet-analytics-badge {
-  background: $color-grey;
-  border-radius: 2px;
-  font-size: 11px;
-  line-height: 16px;
-  margin-right: 4px;
-  padding: 4px 8px;
 }
 
 .mailpoet-analytics-badge-success {
@@ -37,8 +35,8 @@
 }
 
 .mailpoet-analytics-badge-warning {
-
   color: $color-wp-yellow-50;
+
   .mailpoet-analytics-badge {
     background: $color-wp-yellow-0;
     color: $color-wp-yellow-60;
@@ -49,4 +47,10 @@
   color: $color-gutenberg-grey-600;
   font-size: 12px;
   margin: 0;
+}
+
+.mailpoet-analytics-email-actions {
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
