--- a/mailpoet/assets/css/src/components-automation-analytics/colors.scss
+++ b/mailpoet/assets/css/src/components-automation-analytics/colors.scss
@@ -1,5 +1,7 @@
 $color-grey: #ddd;
+$color-gutenberg-grey-100: #f0f0f0;
 $color-gutenberg-grey-600: #949494;
+$color-gutenberg-grey-700: #757575;
 $color-white: #fff;
 $color-black: #1e1e1e;
 $color-primary: #007cba;
@@ -9,3 +11,5 @@ $color-wp-green-60: #007017;
 $color-wp-yellow-0: #fcf9e8;
 $color-wp-yellow-50: #996800;
 $color-wp-yellow-60: #755100;
+$color-wp-red-0: #fcf0f1;
+$color-wp-red-60: #b32d2e;
