Fix email action styles
[MAILPOET-5092]

--- a/mailpoet/assets/css/src/components-automation-analytics/tabs/email.scss
+++ b/mailpoet/assets/css/src/components-automation-analytics/tabs/email.scss
@@ -52,5 +52,6 @@
 .mailpoet-analytics-email-actions {
   align-items: center;
   display: flex;
-  justify-content: center;
+  gap: 8px;
+  justify-content: end;
 }
