Add distance between clear and submit buton in filter
[PREMIUM-232]

--- a/mailpoet/assets/css/src/components-automation-analytics/tabs/subscribers.scss
+++ b/mailpoet/assets/css/src/components-automation-analytics/tabs/subscribers.scss
@@ -1,5 +1,9 @@
 @import '../colors';
 
+.mailpoet-analytics-clear-filters {
+  margin-right: 8px;
+}
+
 .mailpoet-analytics-filter {
   align-items: end;
   display: flex;
