Add loading state because options need to be loaded
[MAILPOET-5452]

--- a/mailpoet/assets/css/src/components-automation-analytics/tabs/orders.scss
+++ b/mailpoet/assets/css/src/components-automation-analytics/tabs/orders.scss
@@ -6,6 +6,15 @@
   color: $color-gutenberg-grey-600;
 }
 
+.mailpoet-analytics-filter {
+  .is-loading {
+    background: $color-gutenberg-grey-100;
+    height: 20px;
+    max-width: 200px;
+    width: 45%;
+  }
+}
+
 .woocommerce-table__item {
   a.mailpoet-analytics-orders__customer {
     align-items: flex-start;
