Show failed runs per step
[MAILPOET-5460]

--- a/mailpoet/assets/css/src/components-automation-analytics/tabs/automation_flow.scss
+++ b/mailpoet/assets/css/src/components-automation-analytics/tabs/automation_flow.scss
@@ -38,6 +38,39 @@
   }
 }
 
+.mailpoet-automation-analytics-step-failed {
+  display: none;
+  position: absolute;
+  bottom: 0;
+  left: -100px;
+  grid-column: 1 / -1;
+  justify-content: center;
+
+  &:after {
+    content: "";
+    width: 100px;
+    height: 0;
+    position: absolute;
+    top: 15px;
+    left: 100%;
+    border-top: 1px dashed $color-gutenberg-grey-600;
+  }
+
+  span {
+    display: block;
+  }
+
+  p {
+    padding: 0 8px;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .mailpoet-automation-analytics-step-failed {
+    display: block;
+  }
+}
+
 .mailpoet-automation-analytics-step-footer {
   background: $color-wp-gray-0;
   border-top: 1px solid $color-poet-gray-dividers;
@@ -47,10 +80,17 @@
   margin-bottom: -12px;
   margin-left: -12px;
   width: calc(100% + 24px);
+  z-index: 1;
 
   p {
-    margin: 0;
     padding: 6px 0;
+  }
+}
+
+.mailpoet-automation-analytics-step-footer,
+.mailpoet-automation-analytics-step-failed {
+  p {
+    margin: 0;
 
     a {
       color: $color-gutenberg-grey-800;
