--- a/mailpoet/assets/css/src/settings/_colors.scss
+++ b/mailpoet/assets/css/src/settings/_colors.scss
@@ -9,6 +9,7 @@ $color-wordpress-border: #c3c4c7;
 $color-wordpress-heading: #1d2327;
 $color-wordpress-button-border: #2271b1;
 $color-wordpress-button-background: #f6f7f7;
+$color-poet-gray-dividers: #dcdcde;
 
 // Primary (blueish) color
 $color-primary: #007cba;
