--- a/mailpoet/assets/css/src/components-public/_public.scss
+++ b/mailpoet/assets/css/src/components-public/_public.scss
@@ -345,6 +345,7 @@ div.mailpoet_form_popup {
   display: block;
   height: 20px;
   margin: 0 0 0 auto;
+  padding: 0;
   position: absolute;
   right: 10px;
   top: 10px;
