Remove data-beacon-article
[MAILPOET-5551]

--- a/mailpoet/views/forms.html
+++ b/mailpoet/views/forms.html
@@ -5,9 +5,9 @@
 
   <div>
     <p class="mailpoet_sending_methods_help help">
-      <% set allowedHtml = {'a': {'href': [], 'target': [], 'id': [], 'data-beacon-article': []}, 'strong': {}} %>
+      <% set allowedHtml = {'a': {'href': [], 'target': [], 'id': []}, 'strong': {}} %>
       <%= __('<strong>Tip:</strong> check out [link]this list[/link] of form plugins that integrate with MailPoet.')
-      |replaceLinkTags('https://kb.mailpoet.com/article/198-list-of-forms-plugins-that-work-with-mailpoet?utm_source=plugin&utm_medium=settings&utm_campaign=helpdocs', {'target': '_blank', id: 'mailpoet_helper_link', 'data-beacon-article': '5953a9720428637ff8d42272'})
+      |replaceLinkTags('https://kb.mailpoet.com/article/198-list-of-forms-plugins-that-work-with-mailpoet?utm_source=plugin&utm_medium=settings&utm_campaign=helpdocs', {'target': '_blank', id: 'mailpoet_helper_link'})
       |wpKses(allowedHtml)
       %>
     </p>
