--- a/mailpoet/assets/css/src/components-public/_public.scss
+++ b/mailpoet/assets/css/src/components-public/_public.scss
@@ -257,6 +257,7 @@ div.mailpoet_form:not(.mailpoet_form_fixed_bar) {
 .mailpoet_form_column {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
 
   // Alignment
   &.mailpoet_vertically_align_top {
