Fix issue with the border of the template cards
The border of the template cards was "jumping" 1px with the hover state.
This was happening because I failed to noticed that the <Card> component
uses `box-shadow: 0 0 0 1px rgba(0, 0, 0, .1)` for the border instead of
using the `border` CSS property. So the `border` that I had added to
.mailpoet-templates-card and .mailpoet-templates-card:hover was creating
this "jumping" effect.

To fix this problem, I opted to use `box-shadow` to create the border
when with the hover state.

[MAILPOET-5394]

--- a/mailpoet/assets/css/src/mailpoet-templates.scss
+++ b/mailpoet/assets/css/src/mailpoet-templates.scss
@@ -59,12 +59,11 @@
 
 .mailpoet-templates-card {
   align-items: flex-end;
-  border: 1px solid white;
   cursor: pointer;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
-  width: 334px;
+  width: 336px;
 
   > div {
     display: grid;
@@ -73,8 +72,7 @@
 
   &:hover {
     background: #fff;
-    border: 1px solid #dcdcde;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, .15);
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, .1), 0 3px 6px rgba(0, 0, 0, .15);
     color: inherit;
   }
 
