--- a/mailpoet/assets/css/src/mailpoet-automation-editor.scss
+++ b/mailpoet/assets/css/src/mailpoet-automation-editor.scss
@@ -14,3 +14,4 @@
 // integrations
 
 @import './components-automation-integrations/mailpoet';
+@import './components-automation-integrations/woocommerce';
