--- a/mailpoet/assets/css/src/components-plugin/_common.scss
+++ b/mailpoet/assets/css/src/components-plugin/_common.scss
@@ -141,3 +141,25 @@ body .components-modal__screen-overlay {
   text-transform: uppercase;
   width: 82px;
 }
+
+.mailpoet-main-container {
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+  margin: auto;
+  max-width: 1072px;
+}
+
+.mailpoet-heading {
+  align-items: center;
+  align-self: stretch;
+  display: flex;
+  justify-content: space-between;
+  padding: 16px 0;
+
+  h1.wp-heading-inline {
+    align-items: center !important;
+    display: flex !important;
+    padding: 4px 0;
+  }
+}
