Replace premium banner with the new premium modal and display badge
[MAILPOET-5398]

--- a/mailpoet/assets/css/src/components-plugin/_segments.scss
+++ b/mailpoet/assets/css/src/components-plugin/_segments.scss
@@ -46,3 +46,10 @@
   background: $color-input-error;
   color: $color-white;
 }
+
+.mailpoet-segments-conditions-bottom {
+  align-items: center;
+  display: flex;
+  gap: 16px;
+  padding-top: 24px;
+}
