--- a/mailpoet/assets/css/src/components-automation-analytics/_colors.scss
+++ b/mailpoet/assets/css/src/components-automation-analytics/_colors.scss
@@ -6,6 +6,7 @@ $color-gutenberg-grey-100: #f0f0f0;
 $color-gutenberg-grey-600: #949494;
 $color-gutenberg-grey-700: #757575;
 $color-gutenberg-grey-800: #2f2f2f;
+$color-gutenberg-grey-900: #1e1e1e;
 $color-white: #fff;
 $color-black: #1e1e1e;
 $color-primary: #007cba;
