Fix layout of the number of reviews segment in the segment edit page
See https://github.com/mailpoet/mailpoet/pull/5174#issuecomment-1746542729

[MAILPOET-5398]

--- a/mailpoet/assets/css/src/components-plugin/_segments.scss
+++ b/mailpoet/assets/css/src/components-plugin/_segments.scss
@@ -20,6 +20,11 @@
   .mailpoet-centered-row {
     max-width: 300px;
   }
+
+  .mailpoet-segments-input-small {
+    margin-left: 0 !important;
+    width: 80px;
+  }
 }
 
 .mailpoet-segments-description-section .mailpoet-form-textarea textarea {
