Fix layout of the last sending date segment in the segment edit page
This change will affect all the segments that use the <DateFields>
component.

See https://github.com/mailpoet/mailpoet/pull/5174#issuecomment-1746542729

[MAILPOET-5398]

--- a/mailpoet/assets/css/src/components-plugin/_segments.scss
+++ b/mailpoet/assets/css/src/components-plugin/_segments.scss
@@ -25,6 +25,11 @@
     margin-left: 0 !important;
     width: 80px;
   }
+
+  .mailpoet-segments-datepicker-small {
+    margin-left: 0 !important;
+    width: 110px;
+  }
 }
 
 .mailpoet-segments-description-section .mailpoet-form-textarea textarea {
