Fix layout of the email segment in the segment edit page
This change will affect all the segments that use the <TextField>
component.

See https://github.com/mailpoet/mailpoet/pull/5174#issuecomment-1746542729

[MAILPOET-5398]

--- a/mailpoet/assets/css/src/components-plugin/_segments.scss
+++ b/mailpoet/assets/css/src/components-plugin/_segments.scss
@@ -26,6 +26,11 @@
     width: 80px;
   }
 
+  .mailpoet-segments-input-medium {
+    margin-left: 0 !important;
+    width: 200px;
+  }
+
   .mailpoet-segments-datepicker-small {
     margin-left: 0 !important;
     width: 110px;
